use maybe-async DrawTarget from embedded-graphics-paul

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 embassy-sync = "0.6.0"
-embedded-graphics = { version = "0.8.1", features = ["async_draw"]} 
+embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 
 [patch.crates-io]
 embedded-graphics = {git = "https://github.com/paulmoseskailer/embedded-graphics.git"}
