add simple_split test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 embassy-sync = "0.6.2"
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 
+[dev-dependencies]
+tokio = {version = "1.44.0", features = ["full"]}
+
 [patch.crates-io]
 embedded-graphics = {git = "https://github.com/paulmoseskailer/embedded-graphics.git"}
 embedded-graphics-core = { git = "https://github.com/paulmoseskailer/embedded-graphics.git" }
