--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,15 @@ edition = "2021"
 [dependencies]
 embassy-sync = "0.6.2"
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
+heapless = "0.8.0"
 
 [dev-dependencies]
 tokio = {version = "1.44.0", features = ["full"]}
+# for examples
+embedded-graphics-simulator = { path = "../simulator-paul/", version = "0.7.0", default-features=false, features = ["with-sdl", "async_draw"]}
+embassy-time = {version = "0.4.0", features = ["std"]}
+embassy-sync = {version = "0.6.2", features = ["std"]}
+embassy-executor = {version = "0.7.0", features = ["arch-std", "executor-thread"]}
 
 [patch.crates-io]
 embedded-graphics = {git = "https://github.com/paulmoseskailer/embedded-graphics.git"}
