--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ embedded-graphics-simulator = { path = "../simulator-paul/", version = "0.7.0", 
 embassy-time = {version = "0.4.0", features = ["std"]}
 embassy-sync = {version = "0.6.2", features = ["std"]}
 embassy-executor = {version = "0.7.0", features = ["arch-std", "executor-thread"]}
+static_cell = "2.1.0"
 
 [patch.crates-io]
 embedded-graphics = {git = "https://github.com/paulmoseskailer/embedded-graphics.git"}
