--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 embassy-sync = "0.6.2"
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 heapless = "0.8.0"
+embassy-time = {version = "0.4.0"}
 
 [dev-dependencies]
 tokio = {version = "1.44.0", features = ["full"]}
