--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ embassy-sync = "0.6.2"
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 heapless = "0.8.0"
 embassy-time = {version = "0.4.0"}
+embassy-executor = {version = "0.7.0"}
 
 [dev-dependencies]
 tokio = {version = "1.44.0", features = ["full"]}
