--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "shared-display"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+
+[workspace]
+members = ["core"]
 
 [dependencies]
+shared-display-core = { path = "core", version = "0.1.0", default-features = false }
 embassy-sync = "0.6.2"
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 heapless = "0.8.0"
