--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 members = ["core"]
 
 [dependencies]
-shared-display-core = { git = "https://github.com/paulmoseskailer/shared-display.git", branch = "16-bit-color-support", version = "0.1.0", default-features = false }
+shared-display-core = { git = "https://github.com/paulmoseskailer/shared-display.git", version = "0.1.0", default-features = false }
 embassy-sync = "0.6.2"
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 heapless = "0.8.0"
