--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2024"
 
 [dependencies]
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
+embassy-sync = "0.6.2"
