--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 embassy-sync = "0.6.2"
+heapless = "0.8.0"
