--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 embedded-graphics = { version = "0.8.1", default-features = false, features = ["async_draw"] } 
 embassy-sync = "0.6.2"
+embassy-time = "0.4.0"
 heapless = "0.8.0"
+portable-atomic = { version = "1.3", default-features = false, features = ["require-cas"] }
