--- a/examples/rp2040/Cargo.toml
+++ b/examples/rp2040/Cargo.toml
@@ -20,7 +20,7 @@ defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
-ssd1351 = { version = "0.5.0", features = ["buffered"] }
+ssd1351 = { path = "../../../ssd1351/" }
 
 shared-display = { path = "../.." }
 
@@ -29,7 +29,6 @@ version = "1.11.0"
 features = ["critical-section"]
 
 [patch.crates-io]
-ssd1351 = { git = "https://github.com/paulmoseskailer/ssd1351.git", branch = "async_draw" }
 embedded-graphics = { git = "https://github.com/paulmoseskailer/embedded-graphics.git" }
 embedded-graphics-core = { git = "https://github.com/paulmoseskailer/embedded-graphics.git" }
 
