--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,3 +9,7 @@ embassy-sync = "0.6.2"
 embassy-time = "0.4.0"
 heapless = "0.8.0"
 portable-atomic = { version = "1.3", default-features = false, features = ["require-cas"] }
+
+[dev-dependencies]
+tokio = {version = "1.44.0", features = ["full"]}
+critical-section = { version = "1.2", features = ["std"] }
