--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ static_cell = "2.1.0"
 
 [dev-dependencies]
 # for examples
-embedded-graphics-simulator = { git = "https://github.com/paulmoseskailer/simulator.git", branch = "compressable", version = "0.7.0", default-features=false, features = ["with-sdl", "async_draw"]}
+#embedded-graphics-simulator = { git = "https://github.com/paulmoseskailer/simulator.git", branch = "compressable", version = "0.7.0", default-features=false, features = ["with-sdl", "async_draw"]}
+embedded-graphics-simulator = { path = "../simulator/", version = "0.7.0", default-features=false, features = ["with-sdl", "async_draw"]}
 embassy-time = {version = "0.4.0", features = ["std"]}
 embassy-sync = {version = "0.7.0", features = ["std"]}
 embassy-executor = {version = "0.7.0", features = ["arch-std", "executor-thread"]}
